# uncrustify

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Adding_Option.md  BUGS  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  ChangeLog  Comments.txt  HELP  INSTALL  INSTALL_4Qt  LIMITATIONS.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README_4Qt  TESTING  Token_help.md  aclocal.m4  appveyor.yml  autogen.sh  changelog.txt  check_settings.sh  configure  configure.ac  configure.in  coverity.sh  coverity.travis.yml  detect_Python_2_3.py  do-c.sh  do-d.sh  extras.vpj  (+21 more)
d/: ChunkList.d  (+13 more)
emscripten/: CMakeLists.txt  CMake_catFiles.cmake  CMake_emscripten_test.cmake  README.md  build.sh  libUncrustify.d.ts  postfix_file  postfix_module.js  prefix_file  prefix_module.js
emscripten/test/: run.sh  run_tests.py  test_run.js
src/: .kateconfig  BlockNumbering.cpp  BlockNumbering.h  ChunkStack.cpp  ChunkStack.h  DoubleLinkedList.cpp  EnumStructUnionParser.cpp  EnumStructUnionParser.h  LIMITATIONS.h  ListManager.h  Makefile  Makefile.am  Makefile.in  ParseFrame.cpp  ParseFrame.h  add_space_table.h  align.cpp  align.h  align_add.cpp  align_add.h  align_asm_colon.cpp  align_asm_colon.h  align_assign.cpp  align_assign.h  align_braced_init_list.cpp  align_braced_init_list.h  align_eigen_comma_init.cpp  align_eigen_comma_init.h  align_func_params.cpp  align_func_params.h  align_func_proto.cpp  align_func_proto.h  align_init_brace.cpp  align_init_brace.h  align_left_shift.cpp  align_left_shift.h  align_log_al.cpp  align_log_al.h  align_nl_cont.cpp  align_nl_cont.h  (+412 more)
src/align/: add.cpp  add.h  align.cpp  align.h  asm_colon.cpp  asm_colon.h  assign.cpp  assign.h  braced_init_list.cpp  braced_init_list.h  eigen_comma_init.cpp  eigen_comma_init.h  func_params.cpp  func_params.h  func_proto.cpp  func_proto.h  init_brace.cpp  init_brace.h  left_shift.cpp  left_shift.h  log_al.cpp  log_al.h  nl_cont.cpp  nl_cont.h  oc_decl_colon.cpp  oc_decl_colon.h  oc_msg_colons.cpp  oc_msg_colons.h  oc_msg_spec.cpp  oc_msg_spec.h  preprocessor.cpp  preprocessor.h  quick_align_again.cpp  quick_align_again.h  same_func_call_params.cpp  same_func_call_params.h  span_num_resolve.h  stack.cpp  stack.h  struct_initializers.cpp  (+11 more)
src/emscripten/: README.md  build.sh  emscripten_module.js  libUncrustify.d.ts  postfix.js
src/newlines/: add.cpp  add.h  after.cpp  after.h  annotations.cpp  annotations.h  before_return.cpp  before_return.h  between.cpp  between.h  blank_line.cpp  blank_line.h  brace_pair.cpp  brace_pair.h  can_increase_nl.cpp  can_increase_nl.h  case.cpp  case.h  chunk_pos.cpp  chunk_pos.h  class_colon_pos.cpp  class_colon_pos.h  cleanup.cpp  cleanup.h  collapse_empty_body.cpp  collapse_empty_body.h  cuddle_uncuddle.cpp  cuddle_uncuddle.h  del_between.cpp  del_between.h  do_else.cpp  do_else.h  do_it_newlines_func_pre_blank_lines.cpp  do_it_newlines_func_pre_blank_lines.h  double_newline.cpp  double_newline.h  double_space_struct_enum_union.cpp  double_space_struct_enum_union.h  eat_start_end.cpp  eat_start_end.h  (+52 more)
src/tokenizer/: EnumStructUnionParser.cpp  EnumStructUnionParser.h  brace_cleanup.cpp  brace_cleanup.h  check_double_brace_init.cpp  check_double_brace_init.h  check_template.cpp  check_template.h  combine.cpp  combine.h  combine_fix_mark.cpp  combine_fix_mark.h  combine_labels.cpp  combine_labels.h  combine_skip.cpp  combine_skip.h  combine_tools.cpp  combine_tools.h  cs_top_is_question.cpp  cs_top_is_question.h  enum_cleanup.cpp  enum_cleanup.h  flag_braced_init_list.cpp  flag_braced_init_list.h  flag_decltype.cpp  flag_decltype.h  flag_parens.cpp  flag_parens.h  mark_functor.cpp  mark_functor.h  mark_question_colon.cpp  mark_question_colon.h  parameter_pack_cleanup.cpp  parameter_pack_cleanup.h  tokenize.cpp  tokenize.h  tokenize_cleanup.cpp  tokenize_cleanup.h
tests/: .cpp.test.swp  .editorconfig  BRACED_INIT_LIST_found_list.awk  CMakeLists.txt  align-struct-init.c  bugs-4.c  bugs-5.c  bugs-6.c  c-sharp.test  c.test  cpp.test  cpp.test-guy  d.test  default_strings.txt  default_strings_remover.py  difftest.sh  ecma.test  embed.c  examine_p_files.sh  fixtest.sh  general.test  generate_p_files.sh  guy.sh  i2c-core.c  imported.test  java.test  my.test  objective-c.test  objective-c.test.bak  pawn.test  regression.test  rejected.test  run_format_tests.py  run_sources_tests.py  run_test.cmake  run_test.py  run_tests.py  run_tests.sh  staging.test  staging.test.bak  (+3 more)
tests/cli/: test_cli_options.py  test_cli_options.sh  test_options_cli.py
tests/cli/Config/: mini_d.cfg
tests/cli/Input/: 21.cpp
tests/cli/Output/: 25.txt  28.txt  31.txt  36.txt  66.txt  9.txt  92.txt  I-842.txt  help.txt  logger_cs_L_99.txt  mini_d_error.txt  mini_d_uc.txt  mini_d_ucwd.txt  mini_nd_uc.txt  mini_nd_ucwd.txt  p.txt  show_config.txt  unmatched_close_pp.txt
tests/cli/config/: copyright-header.cfg  copyright-header.txt  d.cfg  mini_nd.cfg  (+45 more)
tests/config/: 09617.cfg  09618.cfg  1225.cfg  1822.cfg  1927.cfg  1liner-no-split.cfg  1liner-split.cfg  2203.cfg  615_nested_usings.cfg  620_getset-brace.cfg  622_ifdef-indentation.cfg  623_caret-spacing.cfg  625_where-constraints.cfg  633_decl-in-func-typedef.cfg  657.cfg  DefaultAndDelete-0.cfg  DefaultAndDelete-2.cfg  DoxygenComments_f.cfg  DoxygenComments_t.cfg  GH-2091.cfg  I1112-2.cfg  Issue-2278.cfg  Issue_1052.cfg  Issue_1124-r.cfg  Issue_1167.cfg  Issue_1184.cfg  Issue_1460.cfg  Issue_1511.cfg  Issue_1692.cfg  Issue_1734.cfg  Issue_1753.cfg  Issue_1813.cfg  Issue_1923.cfg  Issue_2045.cfg  Issue_2085.cfg  Issue_2090.cfg  Issue_2091.cfg  Issue_2150.cfg  Issue_2163.cfg  Issue_2166.cfg  (+1038 more)
tests/input/: align_fcall.cpp  brace-remove.c  braces-2.c  braces-5.c  braces.c  bugs-2.c  comment-indent.c  ifdef-nest.c  imports.d  return-multi.c  simple.cs  struct-brace.c  switch-case.c  volatile.d
tests/output/: 00000-comment-indent.c  00010-braces.c  00060-braces-2.c  20000-i2c-core.c  40000-HashMap.d  40002-volatile.d
tests/test_uncrustify/: __init__.py  ansicolor.py  config.py  failure.py  selector.py  test.py  utilities.py
(+5814 files in other folders)
